--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
 }
 
 #teams-container {
-  max-width: 800px;
+  max-width: 900px;
   min-width: 600px;
   vertical-align: top;
   position: relative;
@@ -115,7 +115,7 @@ body {
 }
 
 .team {
-  width: 300px;
+  width: 400px;
   display: inline-block;
   vertical-align: top;
   margin: 10px 20px;
@@ -123,13 +123,21 @@ body {
 
 .team-head {
   margin: 0;
-  
 }
 
 .team-body {
   border: solid 1px white;
   text-align: left;
   padding: 10px 10px;
+  background-color:#3250a3ec;
+}
+
+.team-body > div {
+  border-bottom: solid 1px rgba(255, 255, 255, 0.568);
+  padding: 3px 3px;
+}
+.team-body > div:nth-child(n) {
+  border-bottom: none;
 }
 
 .roomCode {
